Fixed text wrapping issue on comments

--- a/src/features/Post/Post.css
+++ b/src/features/Post/Post.css
@@ -25,7 +25,7 @@
     margin: 15px 0px;
 }
 
-.PostText p {
+.PostText, .CommentText {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
